--- a/src/TidyWindow.App/Views/CleanupPage.xaml
+++ b/src/TidyWindow.App/Views/CleanupPage.xaml
@@ -12,6 +12,11 @@
             Title="Cleanup"
             UseLayoutRounding="True"
             SnapsToDevicePixels="True"
+            FontFamily="Segoe UI Variable Text"
+            TextOptions.TextFormattingMode="Display"
+            TextOptions.TextRenderingMode="ClearType"
+            TextOptions.TextHintingMode="Fixed"
+            RenderOptions.ClearTypeHint="Enabled"
             Background="{DynamicResource CleanupBackdropBrush}">
     <Page.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
@@ -1016,15 +1021,20 @@
             Value="0,0,8,8"/>
     </Style>
     </Page.Resources>
-    <Grid>
-        <ScrollViewer x:Name="RootScrollViewer"
+        <Grid UseLayoutRounding="True"
+                    SnapsToDevicePixels="True">
+                <ScrollViewer x:Name="RootScrollViewer"
                       Margin="32"
                       VerticalScrollBarVisibility="Auto"
                       HorizontalScrollBarVisibility="Disabled"
                       CanContentScroll="False"
                       IsDeferredScrollingEnabled="True"
-                      PanningMode="VerticalOnly">
-        <StackPanel MinWidth="760">
+                                            PanningMode="VerticalOnly"
+                                            UseLayoutRounding="True"
+                                            SnapsToDevicePixels="True">
+                <StackPanel MinWidth="760"
+                                        UseLayoutRounding="True"
+                                        SnapsToDevicePixels="True">
         <controls:PageTitleBar Title="Cleanup operations"
                                 Subtitle="{Binding Headline}"
                                 IconGlyph="🧹"
@@ -1782,7 +1792,9 @@
                                                      VirtualizingPanel.VirtualizationMode="Recycling"
                                                      VirtualizingPanel.CacheLength="1"
                                                      VirtualizingPanel.CacheLengthUnit="Page"
-                                                     ParentScrollViewerName="RootScrollViewer">
+                                                     ParentScrollViewerName="RootScrollViewer"
+                                                     UseLayoutRounding="True"
+                                                     SnapsToDevicePixels="True">
                                 <ListView.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <VirtualizingStackPanel
@@ -1965,8 +1977,8 @@
                                                              Padding="8,8,8,4"
                                                              ScrollViewer.VerticalScrollBarVisibility="Auto"
                                                              ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                                             ScrollViewer.CanContentScroll="True"
-                                                             ScrollViewer.IsDeferredScrollingEnabled="True"
+                                                                                                                         ScrollViewer.CanContentScroll="False"
+                                                                                                                         ScrollViewer.IsDeferredScrollingEnabled="False"
                                                              VirtualizingPanel.IsVirtualizing="True"
                                                              VirtualizingPanel.IsVirtualizingWhenGrouping="True"
                                                              VirtualizingPanel.IsContainerVirtualizable="True"
@@ -1974,7 +1986,9 @@
                                                              VirtualizingPanel.VirtualizationMode="Recycling"
                                                              VirtualizingPanel.CacheLength="1"
                                                              VirtualizingPanel.CacheLengthUnit="Page"
-                                                             ParentScrollViewerName="RootScrollViewer">
+                                                                                                                         ParentScrollViewerName="RootScrollViewer"
+                                                                                                                         UseLayoutRounding="True"
+                                                                                                                         SnapsToDevicePixels="True">
                                         <ListView.ItemsPanel>
                                             <ItemsPanelTemplate>
                                                 <VirtualizingStackPanel
